crates/render/src/snapshots/mix_render__replay__doctor-healthy-default.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
     Checked system in 1.00s
