crates/render/src/snapshots/mix_render__replay__doctor-healthy-quiet.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---

