crates/render/src/snapshots/mix_render__replay__doctor-problems-quiet.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
error: found 4 problems
  |
  = help: run `mix repair` to fix the ones it can
