crates/render/src/snapshots/mix_render__replay__failed-events.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
{"header":{"format":"mix.capture.v1","mixVersion":"0.1.0","request":"01920000-0000-7000-8000-000000000004"}}
{"record":{"offset":"0s","envelope":{"seq":"1","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"1","key":"install","command":{"mixVersion":"0.1.0","schemaMinor":8,"install":{"packages":["hello"]}}}}}}
{"record":{"offset":"1s","envelope":{"seq":"2","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"2","parent":"1","key":"plan","planned":["write-config","activate"],"plan":{"title":"install"}}}}}
{"record":{"offset":"2s","envelope":{"seq":"3","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"3","parent":"2","key":"write-config","step":{"verb":"VERB_WRITING","subject":"package list"}}}}}
{"record":{"offset":"3s","envelope":{"seq":"4","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"4","parent":"3","key":"a1","action":{"operation":"OPERATION_PUT_FILE","subject":"/home/ciuser/.local/state/mix/state"}}}}}
{"record":{"offset":"4s","envelope":{"seq":"5","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"4","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"5s","envelope":{"seq":"6","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"3","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"6s","envelope":{"seq":"7","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"5","parent":"2","key":"activate","step":{"verb":"VERB_INSTALLING","subject":"hello"}}}}}
{"record":{"offset":"7s","envelope":{"seq":"8","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"6","parent":"5","key":"a2","action":{"operation":"OPERATION_ACTIVATE_PROFILE","subject":"ciuser's profile"}}}}}
{"record":{"offset":"8s","envelope":{"seq":"9","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"6","status":"STATUS_FAILED","diagnostic":{"code":"CODE_UNKNOWN_PACKAGE","severity":"SEVERITY_ERROR","message":"nix build failed","causes":[{"code":"CODE_COMMAND_FAILED","severity":"SEVERITY_ERROR","message":"`/nix/var/nix/profiles/default/bin/nix build` failed","command":{"command":"/nix/var/nix/profiles/default/bin/nix build","exitStatus":1,"outputTail":"error: attribute 'hello' missing\n       at /nix/store/x5piy362vlnbxc71zd6alpswvgsdsv55-source/home.nix:10:7:\n            9|       pkgs.git\n           10|       pkgs.hello\n             |       ^\n           11|     ];\n       Did you mean hello2?"}}],"packages":{"packages":["hello"]}}}}}}
{"record":{"offset":"9s","envelope":{"seq":"10","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"5","status":"STATUS_FAILED","diagnostic":{"code":"CODE_UNKNOWN_PACKAGE","severity":"SEVERITY_ERROR","message":"nix build failed","causes":[{"code":"CODE_COMMAND_FAILED","severity":"SEVERITY_ERROR","message":"`/nix/var/nix/profiles/default/bin/nix build` failed","command":{"command":"/nix/var/nix/profiles/default/bin/nix build","exitStatus":1,"outputTail":"error: attribute 'hello' missing\n       at /nix/store/x5piy362vlnbxc71zd6alpswvgsdsv55-source/home.nix:10:7:\n            9|       pkgs.git\n           10|       pkgs.hello\n             |       ^\n           11|     ];\n       Did you mean hello2?"}}],"packages":{"packages":["hello"]}}}}}}
{"record":{"offset":"10s","envelope":{"seq":"11","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"7","parent":"2","key":"undo-activate","rollback":{"undoes":"5"}}}}}
{"record":{"offset":"11s","envelope":{"seq":"12","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"7","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"12s","envelope":{"seq":"13","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"8","parent":"2","key":"undo-write-config","rollback":{"undoes":"3"}}}}}
{"record":{"offset":"13s","envelope":{"seq":"14","request":"01920000-0000-7000-8000-000000000004","nodeStarted":{"id":"9","parent":"8","key":"u1","action":{"operation":"OPERATION_RESTORE","subject":"/home/ciuser/.local/state/mix/state"}}}}}
{"record":{"offset":"14s","envelope":{"seq":"15","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"9","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"15s","envelope":{"seq":"16","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"8","status":"STATUS_SUCCEEDED"}}}}
{"record":{"offset":"16s","envelope":{"seq":"17","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"2","status":"STATUS_FAILED","diagnostic":{"code":"CODE_UNKNOWN_PACKAGE","severity":"SEVERITY_ERROR","message":"nix build failed","causes":[{"code":"CODE_COMMAND_FAILED","severity":"SEVERITY_ERROR","message":"`/nix/var/nix/profiles/default/bin/nix build` failed","command":{"command":"/nix/var/nix/profiles/default/bin/nix build","exitStatus":1,"outputTail":"error: attribute 'hello' missing\n       at /nix/store/x5piy362vlnbxc71zd6alpswvgsdsv55-source/home.nix:10:7:\n            9|       pkgs.git\n           10|       pkgs.hello\n             |       ^\n           11|     ];\n       Did you mean hello2?"}}],"packages":{"packages":["hello"]}}}}}}
{"record":{"offset":"17s","envelope":{"seq":"18","request":"01920000-0000-7000-8000-000000000004","nodeFinished":{"id":"1","status":"STATUS_FAILED","diagnostic":{"code":"CODE_UNKNOWN_PACKAGE","severity":"SEVERITY_ERROR","message":"nix build failed","causes":[{"code":"CODE_COMMAND_FAILED","severity":"SEVERITY_ERROR","message":"`/nix/var/nix/profiles/default/bin/nix build` failed","command":{"command":"/nix/var/nix/profiles/default/bin/nix build","exitStatus":1,"outputTail":"error: attribute 'hello' missing\n       at /nix/store/x5piy362vlnbxc71zd6alpswvgsdsv55-source/home.nix:10:7:\n            9|       pkgs.git\n           10|       pkgs.hello\n             |       ^\n           11|     ];\n       Did you mean hello2?"}}],"packages":{"packages":["hello"]}},"exitCode":1}}}}
