crates/render/src/snapshots/mix_render__replay__installed-default.snap
---
source: crates/render/src/replay.rs
expression: "std::str::from_utf8(observed).expect(\"what mix prints is UTF-8\")"
---
    Blocking waiting for alice's `mix install` to finish
     Writing package list
  Installing hello
    Blocking waiting for ciuser's `nix-env -i hello` to release /home/ciuser/.local/state/nix/profiles/profile.lock
warning: the change was made but not recorded in git

help: run `mix repair` to record it

Caused by:
  fatal: not a git repository

   Installed hello in 31.00s
